--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # ----------------------- #
 
 url: http://bigday.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
-simple_search: https://www.google.com/search
+title: 风继续吹
+subtitle: A blogging framework for 峇峇.
+author: adansonia
+simple_search: https://www.bing.com/search
 description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
