--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: mygitblog0927
-disqus_show_comment_count: true
+#disqus_short_name: mygitblog0927
+#disqus_show_comment_count: true
 
 # duoshuo Comments
 duoshuo_comments: true
